fixed legend wrapping

--- a/fall_of_unm/en/css/application.compiled.css
+++ b/fall_of_unm/en/css/application.compiled.css
@@ -125,6 +125,7 @@ h5 {
   line-height: 1.3;
   color: #3d3d3d;
   font-family: nexa_light;
+  padding-left: 18px;
 }
 #object .legend .items .item:not(:last-child) {
   margin-bottom: 5px;
@@ -133,7 +134,7 @@ h5 {
   width: 12px;
   height: 12px;
   display: inline-block;
-  margin: 0px 3px 0px 0px;
+  margin: 0px 3px 0px -18px;
   vertical-align: middle;
 }
 #object .legend .items .item.no div {
