--- a/fall_of_unm/ka/css/application.compiled.css
+++ b/fall_of_unm/ka/css/application.compiled.css
@@ -124,6 +124,7 @@ h5 {
   font-size: 12px;
   font-family: 'bpg_nino_elite_exp';
   line-height: 1.3;
+  padding-left: 18px;
 }
 #object .legend .items .item:not(:last-child) {
   margin-bottom: 5px;
@@ -132,7 +133,7 @@ h5 {
   width: 12px;
   height: 12px;
   display: inline-block;
-  margin: 0px 3px 0px 0px;
+  margin: 0px 3px 0px -18px;
   vertical-align: middle;
 }
 #object .legend .items .item.no div {
